--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Your main CSS file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"> <!-- Font Awesome -->
 </head>
+
 <body>
     <!-- Navigation Bar -->
     <header>
@@ -17,28 +20,35 @@
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
-            <div class="hamburger" id="hamburger">
-                <span></span><span></span><span></span>
+            <!-- Search Bar -->
+            <div class="search-container">
+                <input type="text" id="search" placeholder="Search for products..." name="search">
+                <button type="submit" id="search-btn"><i class="fas fa-search"></i></button>
             </div>
+            <div class="hamburger">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+              </div>
         </nav>
     </header>
 
-    <!-- Hero Section-->
+    <!-- Hero Section with Carousel -->
     <section id="hero">
         <div class="carousel">
             <div class="carousel-slide">
-                <img src="fasion.jpg" alt="Slide 1">
+                <img src="fasion.jpg" alt="Fashion collection display 1">
             </div>
             <div class="carousel-slide">
-                <img src="fasion1.jpg" alt="Slide 2">
+                <img src="fasion1.jpg" alt="Fashion collection display 2">
             </div>
             <div class="carousel-slide">
-                <img src="fasion2.jpg" alt="Slide 3">
+                <img src="fasion4.jpg" alt="Fashion collection display 3">
             </div>
         </div>
     </section>
 
-    <!-- Product Grid -->
+    <!-- Product Grid Section -->
     <section id="shop">
         <h2>Featured Products</h2>
         <div class="product-grid">
@@ -61,23 +71,64 @@
         </div>
     </section>
 
-    <!-- Footer Section -->
-    <footer>
-        <div class="footer-content">
-            <div class="contact-info">
-                <p>Contact Us: ajayshah33192@gmail.com</p>
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <h1>Contact  </h1>
+        <h3 class="heading"> Get In Touch</h3>
+        <p> Please use the form below to get in touch with us. We’ll respond to your inquiry as soon as possible.</p>
+        <div class="row">
+            <div class="image">
+                <img src="contact-removebg-preview.png" alt="Contact us illustration">
             </div>
-            <div class="social-links">
-                <a href="#">Facebook</a>
-                <a href="#">Twitter</a>
-                <a href="#">Instagram</a>
-            </div>
-            <div class="privacy-policy">
-                <a href="#">Privacy Policy</a>
+            <div class="form-container">
+                <form action="submit-form.php" method="POST">
+                    <input type="text" name="full-name" placeholder="Full Name" required>
+                    <input type="email" name="email" placeholder="Enter your email" required>
+                    <input type="tel" name="phone" placeholder="Phone Number" required>
+                    <textarea name="message" cols="30" rows="10" placeholder="Message" required></textarea>
+                    <input type="submit" value="Send Message">
+                </form>
             </div>
         </div>
-    </footer>
+    </section>
 
-    <script src="script.js"></script>
+    <section id="teacher" class="teacher">
+        <div class="card-container">
+            <div class="card">
+                <h3><i class="fas fa-map-marker-alt"></i> Address</h3>
+                <p>A-56, Sector 57, Noida, Uttar Pradesh – 201301</p>
+            </div>
+            <div class="card">
+                <h3><i class="fas fa-clock"></i> Business Hours</h3>
+                <p>Monday-Sunday: 24/7.</p>
+            </div>
+            
+            <div class="card">
+                <h3><i class="fas fa-phone-alt"></i> For Sales and Product Enquiry</h3>
+                <p>+91-9667651506<br />
+                    <a href="mailto:info@company.com">ajayshah33192@gmail.com</a>
+                </p>
+            </div>
+        </div>
+    </section>
+
+    <!--End  Contact Section -->
+
+    <!-- Footer Section -->
+    <section class="footer">
+        <div class="icons">
+            <a href="#" class="fab fa-facebook-f" aria-label="Facebook"></a>
+            <a href="#" class="fab fa-twitter" aria-label="Twitter"></a>
+            <a href="#" class="fab fa-instagram" aria-label="Instagram"></a>
+            <a href="#" class="fab fa-github" aria-label="Github"></a>
+            <a href="#" class="fab fa-pinterest" aria-label="Pinterest"></a>
+        </div>
+        <div class="credit">Created by <span>Mr. Ajay Shah</span> | All rights reserved.</div>
+    </section>
+
+    <!-- Include jQuery and script.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script> <!-- jQuery -->
+    <script src="script.js"></script> <!-- Your custom JavaScript -->
 </body>
+
 </html>
