--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#shop">Shop</a></li>
                 <li><a href="#about">About Us</a></li>
                 <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#order">Order Now</a></li>
             </ul>
             <!-- Search Bar -->
             <div class="search-container">
@@ -61,7 +62,7 @@
                 <p>Product 2</p>
             </div>
             <div class="product">
-                <img src="fasion2.jpg" alt="Product 3">
+                <img src="shopping.webp" alt="Product 3">
                 <p>Product 3</p>
             </div>
             <div class="product">
@@ -70,6 +71,21 @@
             </div>
         </div>
     </section>
+
+    <!--vedio section start-->
+    <video autoplay muted loop id="myVideo">
+        <source src="5585944-hd_1920_1080_25fps.mp4" type="video/mp4">
+        Your browser does not support HTML5 video.
+      </video>
+      
+      <div class="content">
+        <h1>Our product</h1>
+          <p>Welcome to our e-commerce store! Discover a wide range of high-quality products at unbeatable prices. From trendy fashion to the latest tech gadgets, we’ve got something for everyone. Enjoy a seamless shopping experience with fast shipping, easy returns, and secure payment options. Shop now and experience the difference!</p>
+      <div class="content">
+        <button id="myBtn" onclick="myFunction()">Pause</button>
+      </div>
+      </div>
+    <!--vedio section End-->
 
     <!-- Contact Section -->
     <section class="contact" id="contact">
@@ -86,7 +102,7 @@
                     <input type="email" name="email" placeholder="Enter your email" required>
                     <input type="tel" name="phone" placeholder="Phone Number" required>
                     <textarea name="message" cols="30" rows="10" placeholder="Message" required></textarea>
-                    <input type="submit" value="Send Message">
+                    <input type="submit" value="Send Message" id="message">
                 </form>
             </div>
         </div>
